--- a/apikey/deploy/buildspec.yml
+++ b/apikey/deploy/buildspec.yml
@@ -17,7 +17,7 @@ phases:
     finally:
       - terraform --version
 #     we only work within code
-      - cd applications/apikey/application
+      - cd apikey/application
 
   post_build:
     commands:
