test auth permissions - both if it gets updated as part of deployment, as well as if it is taking effect as expected

--- a/amplify/client/package.json
+++ b/amplify/client/package.json
@@ -16,6 +16,7 @@
     "@aws-sdk/credential-provider-node": "^3.600.0",
     "@aws-sdk/protocol-http": "^3.374.0",
     "@aws-sdk/signature-v4": "^3.374.0",
+    "aws-amplify": "^5.3.19",
     "aws4": "^1.13.0",
     "axios": "^1.6.8"
   }
